[package]
name = "superblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3.3"
binrw = "0.13.0"
crc32fast = "1.3.2"
derivative = "2.2.0"
scopeguard = "1.2.0"
serde = "1.0.190"
serde_derive = "1.0.190"
