[package]
name = "superblock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
binrw = "0.13.0"
crc32fast = "1.3.2"
crc32c = "0.6"
derivative = "2.2.0"
scopeguard = "1.2.0"
sha256 = "1.4.0"
sha2 = "0.10.8"
digest = "0.10.7"
